--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                     Sube tus cartas: prepara una lista, guarda usuarios y encuentra quién posee tus cartas.
                 </p>
             </a>
+            
+            <!-- Neo MTG Print -->
+            <a href="apps/NeoMtgPrint/structure.html"
+                class="block p-6 rounded-2xl shadow-lg bg-white dark:bg-gray-800 hover:shadow-xl transition">
+                <h3 class="text-lg font-bold mb-2">Neo MTG Print</h3>
+                <p class="text-sm text-gray-600 dark:text-gray-300">
+                    Prepara tu listas de cartas para jugar.
+                </p>
+            </a>
             <!-- Se vienen cositas -->
         </div>
     </main>
