--- a/apps/NeoMtgPrint/structure.html
+++ b/apps/NeoMtgPrint/structure.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
 
-    <header class="flex justify-between items-center p-6 border-b border-gray-300 dark:border-gray-700">
+    <header class="p-4 shadow-md bg-white dark:bg-gray-800 flex justify-between items-center">
         <h1 class="text-2xl font-bold">Neo MTG Print</h1>
         <a href="../../index.html" class="text-sm text-gray-600 dark:text-gray-300 hover:underline">⬅ Volver</a>
     </header>
-
     <main class="flex-grow p-6 max-w-5xl mx-auto">
 
         <section class="mb-8">
@@ -26,6 +25,7 @@
             <input type="text" id="deckNameInput"
                 class="w-full mb-3 p-3 border border-gray-300 dark:border-gray-700 rounded-xl bg-white dark:bg-gray-800 focus:ring-blue-500 outline-none"
                 placeholder="Nombre del mazo (opcional)" />
+
             <textarea id="deckInput"
                 class="w-full h-48 p-3 border border-gray-300 dark:border-gray-700 rounded-2xl bg-white dark:bg-gray-800 focus:ring-blue-500 outline-none resize"
                 placeholder="Pega tu lista de cartas aquí..."></textarea>
