Corección de estilos
botón volver

--- a/apps/listFinder/structure.html
+++ b/apps/listFinder/structure.html
@@ -8,6 +8,15 @@
     <link rel="icon" href="../../assets/calvo.webp" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
+    <style>
+        .user-header:hover {
+            background-color: rgba(0, 0, 0, 0.02);
+        }
+
+        .dark .user-header:hover {
+            background-color: rgba(255, 255, 255, 0.02);
+        }
+    </style>
 </head>
 
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
