--- a/apps/listFinder/structure.html
+++ b/apps/listFinder/structure.html
@@ -19,13 +19,14 @@
     </style>
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
-
-    <header class="p-4 shadow-md bg-white dark:bg-gray-800 flex justify-between items-center">
-        <h1 class="text-2xl font-bold">🎴 Magic Card Matcher</h1>
-        <a href="../../index.html" class="text-sm text-gray-600 dark:text-gray-300 hover:underline">⬅ Volver</a>
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen">
+    <header class="p-4 shadow-md bg-white dark:bg-gray-800">
+        <a href="../../index.html" class="block text-center hover:opacity-80 transition duration-150">
+            <h1 class="text-2xl font-bold">🎴 Magic Card Matcher</h1>
+        </a>
     </header>
-    <main class="p-6 max-w-6xl mx-auto space-y-10 flex-grow">
+
+    <main class="p-6 max-w-6xl mx-auto space-y-10">
         <section>
             <h2 class="text-xl font-semibold mb-2">1) Sube la lista de otros usuarios</h2>
             <div class="flex flex-wrap gap-3 mb-2">
@@ -55,6 +56,11 @@
 
         <section>
             <h2 class="text-xl font-semibold mb-2">3) Sube o pega tu propia lista</h2>
+            <div class="flex gap-2 mb-3">
+                <button id="toggleWishlist" class="px-4 py-2 rounded bg-pink-600 text-white hover:bg-pink-700">
+                    💝 Mi Wishlist
+                </button>
+            </div>
             <div class="grid sm:grid-cols-2 gap-3 mb-3">
                 <textarea id="myList" placeholder="Una carta por línea..."
                     class="border rounded p-2 h-32 dark:bg-gray-800 dark:border-gray-600"></textarea>
@@ -71,6 +77,7 @@
 
             <div class="border-t pt-4 mt-4">
                 <h3 class="font-semibold mb-3">🔍 Búsqueda avanzada con filtros</h3>
+                <p id="filterMessage" class="text-sm text-red-500 mb-2"></p>
                 <div class="space-y-3">
                     <div class="flex gap-2">
                         <input id="searchCard" type="text" placeholder="Nombre de la carta (ej: Lightning Bolt)"
@@ -142,18 +149,178 @@
         </section>
 
         <section>
-            <h2 class="text-xl font-semibold mb-2">Resultados</h2>
-            <div class="flex gap-2 mb-3">
-                <button id="viewNormal" class="px-4 py-2 rounded bg-indigo-600 text-white hover:bg-indigo-700">
-                    Vista Normal
-                </button>
-                <button id="viewWhoHas" class="px-4 py-2 rounded bg-purple-600 text-white hover:bg-purple-700">
-                    Vista "Quién tiene qué"
-                </button>
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-xl font-semibold">Resultados</h2>
             </div>
             <div id="results" class="space-y-4 text-sm text-gray-800 dark:text-gray-200"></div>
         </section>
+
+        <div id="compareModal"
+            class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center p-4">
+            <div class="bg-white dark:bg-gray-800 rounded-lg max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6">
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-xl font-bold">Comparar Jugadores</h3>
+                    <button id="closeCompareModal" class="text-2xl hover:text-gray-500">&times;</button>
+                </div>
+                <div class="space-y-4">
+                    <div>
+                        <label class="block text-sm font-medium mb-1">Jugador 1:</label>
+                        <select id="compareUser1"
+                            class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:border-gray-600">
+                            <option value="">Selecciona un jugador</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium mb-1">Jugador 2:</label>
+                        <select id="compareUser2"
+                            class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:border-gray-600">
+                            <option value="">Selecciona un jugador</option>
+                        </select>
+                    </div>
+                    <button id="runComparison"
+                        class="w-full bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">
+                        Comparar
+                    </button>
+                </div>
+                <div id="comparisonResults" class="mt-4"></div>
+            </div>
+        </div>
+
+        <div id="statsModal"
+            class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center p-4">
+            <div class="bg-white dark:bg-gray-800 rounded-lg max-w-4xl w-full max-h-[90vh] overflow-y-auto p-6">
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-xl font-bold">📊 Estadísticas del Grupo</h3>
+                    <button id="closeStatsModal" class="text-2xl hover:text-gray-500">&times;</button>
+                </div>
+                <div id="statsContent" class="space-y-6"></div>
+            </div>
+        </div>
+
+        <div id="wishlistModal"
+            class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center p-4">
+            <div class="bg-white dark:bg-gray-800 rounded-lg max-w-4xl w-full max-h-[90vh] overflow-y-auto p-6">
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-xl font-bold">💝 Mi Wishlist</h3>
+                    <div class="flex gap-2 items-center">
+                        <button id="shareWishlist"
+                            class="px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">
+                            📤 Compartir
+                        </button>
+                        <button id="importWishlist"
+                            class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-sm">
+                            📥 Importar
+                        </button>
+                        <button id="closeWishlistModal" class="text-2xl hover:text-gray-500">&times;</button>
+                    </div>
+                </div>
+
+                <div id="wishlistStats"
+                    class="mb-6 p-4 bg-gradient-to-r from-pink-50 to-purple-50 dark:from-pink-900 dark:to-purple-900 rounded-lg">
+                    <div class="flex justify-between items-center mb-2">
+                        <div class="font-semibold">Progreso de Wishlist</div>
+                        <div id="wishlistPercentage" class="text-2xl font-bold text-pink-600 dark:text-pink-400">0%
+                        </div>
+                    </div>
+                    <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-4 mb-2">
+                        <div id="wishlistProgressBar"
+                            class="bg-gradient-to-r from-pink-500 to-purple-500 h-4 rounded-full transition-all duration-500"
+                            style="width: 0%"></div>
+                    </div>
+                    <div class="grid grid-cols-4 gap-2 text-sm">
+                        <div class="text-center">
+                            <div class="font-semibold" id="wishlistTotal">0</div>
+                            <div class="text-xs text-gray-600 dark:text-gray-400">Total</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="font-semibold text-green-600 dark:text-green-400" id="wishlistAvailable">0</div>
+                            <div class="text-xs text-gray-600 dark:text-gray-400">Disponibles</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="font-semibold text-red-600 dark:text-red-400" id="wishlistMissing">0</div>
+                            <div class="text-xs text-gray-600 dark:text-gray-400">Faltan</div>
+                        </div>
+                        <div class="text-center">
+                            <div class="font-semibold text-blue-600 dark:text-blue-400" id="wishlistValue">-</div>
+                            <div class="text-xs text-gray-600 dark:text-gray-400">Valor €</div>
+                        </div>
+                    </div>
+                    <button id="updatePrices"
+                        class="mt-3 w-full text-xs bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">
+                        💰 Actualizar Precios
+                    </button>
+                </div>
+
+                <div class="mb-6 p-4 bg-gray-50 dark:bg-gray-700 rounded-lg">
+                    <h4 class="font-semibold mb-3">Añadir carta a la wishlist:</h4>
+                    <div class="flex gap-2 mb-2">
+                        <input type="text" id="wishlistCardName" placeholder="Nombre de la carta"
+                            class="flex-grow border rounded px-3 py-2 dark:bg-gray-800 dark:border-gray-600">
+                        <select id="wishlistPriority"
+                            class="border rounded px-3 py-2 dark:bg-gray-800 dark:border-gray-600">
+                            <option value="high">🔴 Alta</option>
+                            <option value="medium" selected>🟡 Media</option>
+                            <option value="low">🟢 Baja</option>
+                        </select>
+                        <button id="addToWishlist" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700">
+                            Añadir
+                        </button>
+                    </div>
+                    <div class="flex gap-2 text-xs text-gray-500">
+                        <label class="flex items-center gap-1">
+                            <input type="checkbox" id="wishlistFoilOnly" class="rounded">
+                            Solo Foil
+                        </label>
+                        <label class="flex items-center gap-1">
+                            <input type="checkbox" id="wishlistSpecificSet" class="rounded">
+                            Set específico
+                        </label>
+                        <input type="text" id="wishlistSetCode" placeholder="Código set (ej: MH3)"
+                            class="border rounded px-2 py-1 text-xs dark:bg-gray-800 dark:border-gray-600 disabled:opacity-50"
+                            disabled>
+                    </div>
+                </div>
+
+                <div id="wishlistContent" class="space-y-2"></div>
+
+                <button id="checkWishlistAvailability"
+                    class="w-full mt-4 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-700 font-semibold">
+                    🔍 Buscar Disponibilidad
+                </button>
+
+                <div id="wishlistResults" class="mt-4"></div>
+            </div>
+        </div>
     </main>
+
+    <div id="floating-actions" class="fixed bottom-6 right-6 z-50">
+        <details class="relative inline-block text-right">
+            <summary
+                class="px-5 py-3 bg-indigo-600 text-white rounded-full cursor-pointer shadow-lg hover:bg-indigo-700 transition duration-150 font-medium">
+                Acciones
+            </summary>
+            <div
+                class="absolute right-0 bottom-full mb-2 w-48 origin-top-right rounded-md shadow-2xl bg-white dark:bg-gray-800 ring-1 ring-black ring-opacity-5 focus:outline-none">
+                <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                    <button id="exportResults"
+                        class="w-full text-right px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700"
+                        role="menuitem" tabindex="-1">
+                        📤 Exportar Resultados
+                    </button>
+                    <button id="compareUsers"
+                        class="w-full text-right px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700"
+                        role="menuitem" tabindex="-1">
+                        ⚖️ Comparar Jugadores
+                    </button>
+                    <button id="statsBtn"
+                        class="w-full text-right px-4 py-2 text-sm text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700"
+                        role="menuitem" tabindex="-1">
+                        📊 Estadísticas
+                    </button>
+                </div>
+            </div>
+        </details>
+    </div>
     <script src="script.js"></script>
 </body>
 
