--- a/structure.html
+++ b/structure.html
@@ -22,20 +22,13 @@
 
             <div class="grid md:grid-cols-2 gap-4 mb-4">
                 <div>
-                    <label class="block text-sm font-medium mb-2">Importar desde URL (Moxfield/Archidekt):</label>
-                    <input type="text" id="deckUrl" placeholder="https://www.moxfield.com/decks/..."
+                    <label class="block text-sm font-medium mb-2">Importar desde URL:</label>
+                    <input type="text" id="deckUrl" placeholder="moxfield, archidekt, tappeout, deckstats"
                         class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:border-gray-600">
                     <button id="importUrlBtn"
                         class="mt-2 w-full bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
                         Importar desde URL
                     </button>
-                </div>
-
-                <div>
-                    <label class="block text-sm font-medium mb-2">O pegar lista manualmente:</label>
-                    <div class="text-xs text-gray-500 mb-2">
-                        Formato: 4x Lightning Bolt (MH3) 122 *F*
-                    </div>
                 </div>
             </div>
         </section>
