--- a/apps/listFinder/structure.html
+++ b/apps/listFinder/structure.html
@@ -82,8 +82,7 @@
                     <label id="myFile" for="uploadFile" class="file-label">
                         Seleccionar archivo (.csv)
                     </label>
-                    <input type="file" id="uploadFile" accept=".csv" class="hidden">
-
+                    <input type="file" id="uploadFile" accept=".csv, text/plain">
                     <button id="saveBtn"
                         class="w-full bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 font-semibold transition duration-150">
                         💾 Guardar Lista
