--- a/apps/listFinder/structure.html
+++ b/apps/listFinder/structure.html
@@ -60,9 +60,10 @@
 </head>
 
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen">
-    <header class="p-4 shadow-md bg-white dark:bg-gray-800">
-        <a href="../../index.html" class="block text-center hover:opacity-80 transition duration-150">
-            <h1 class="text-2xl font-bold">🎴 Magic Card Matcher</h1>
+    <header class="w-full text-center py-4 bg-gray-50 dark:bg-gray-900 border-b dark:border-gray-700 shadow-md">
+        <a href="../../index.html"
+            class="text-3xl font-extrabold text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 no-underline cursor-pointer">
+            🎴 Magic Card Matcher
         </a>
     </header>
 
